--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
         <head>
 
-                <title>Bootstrap Portfolio</title>
+                <title>Wilson Prevette</title>
             
                 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
                 <link rel="stylesheet" type="text/css" href="assets/css/style.css"
